<resources>
    <string name="app_name">Shopping</string>
    <string name="title_activity_maps">Select Map Location</string>
    <string name="invalid_email">Email must be like this \"example@example.example\"</string>
    <string name="invalid_phone1">Phone number required</string>
    <string name="invalid_phone_not_correct">Phone number not Correct</string>
    <string name="invalid_confirm_password">Confirm password not match</string>
    <string name="invalid_phone2"> number</string>
    <string name="Search">Search on Haraj</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="login">Log In</string>
    <string name="forget_password">Forget Password?</string>
    <string name="forget_password_title">Forget Password</string>
    <string name="enter_email_we_help">"Enter Your email and we'll help \n you reset your password"</string>
    <string name="dont_wory">"Don't  Worry !"</string>
    <string name="mail">Mail</string>
    <string name="phone">Mobile number</string>
    <string name="reset_pass">Reset Password</string>
    <string name="Reghis">Reghis</string>
    <string name="favourites">Favourites</string>
    <string name="notification">Notification</string>
    <string name="messages">Messages</string>
    <string name="addposting">Add Posting</string>
    <string name="uploadimg">Upload Imgs</string>
    <string name="Aim_app">All You need without stress</string>
    <string name="Aim_app2">"Request anything you need, there are\n all thing in this app"</string>
    <string name="sign_in">Log In</string>
    <string name="rejester">Sign Up</string>
    <string name="phone_or_usernumber">Phone number or user name</string>
    <string name="Password">Password</string>
    <string name="re_Password">Re_Password</string>
    <string name="phone2">Phone</string>
    <string name="Dont_have_an_account">"Don't have an account?"</string>
    <string name="create_new_account">Create a new Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="Agree_the_Terms_and_Condition">Agree To</string>
    <string name="Already_have_Account">Already have Account?</string>
    <string name="Login_here">Login here</string>
    <string name="empty">Please Enter and Complete your Data First</string>
    <string name="warning">Warning</string>
    <string name="invalid_email_required_field">Email Field Required</string>
    <string name="invalid_password">Password must be more than 7 of chars and numbers</string>
    <string name="not_match">The password not match </string>
    <string name="check_empty_login">You must agree to the terms of use.</string>
    <string name="error_inter_net">No internet connection  \nPlease check your internet and try again</string>
    <string name="error_inter_net1">No internet connection </string>
    <string name="error_inter_net2">Make sure WI-FI / mobile data is turned on \nthen try again</string>
    <string name="error">Server error Please try agian</string>
    <string name="wait">Please wait …</string>
    <string name="contact_with_admin">Please Contact With the Admin</string>
    <string name="cancel">Cancel</string>
    <string name="call">Call</string>
    <string name="welcome">Welcome</string>
    <string name="load_more">Load More</string>
    <string name="Sorry">Sorry !</string>
    <string name="NotAuthou">Your Session Finished Please Login again</string>
    <string name="Ok">OK</string>
    <string name="try_again">Try Again</string>
    <string name="home_page">Home</string>
    <string name="search_product">Search About Product</string>
    <string name="categories">Categories</string>
    <string name="show_all">Show All</string>
    <string name="more_seller">More Selling</string>
    <string name="Reial">Reial</string>
    <string name="no_price">No Price</string>
    <string name="famous_mark">Famous Mark</string>
    <string name="today_offer">Today Offers</string>
    <string name="more">More</string>
    <string name="account_update">Account Update</string>
    <string name="bin">Bin</string>
    <string name="orders">Orders</string>
    <string name="addresses">Addresses</string>
    <string name="change_language">Change Language</string>
    <string name="terms_condition">Terms and Conditions</string>
    <string name="privacy">Privacy</string>
    <string name="contact_us">Contact Us</string>
    <string name="log_out">Log Out</string>
    <string name="add_rate">Add Rate</string>
    <string name="rememberme">Remember Me</string>
    <string name="wellcome">welcome</string>
    <string name="user_name">user name</string>
    <string name="email">E-mail</string>
    <string name="new_user">New user ?</string>
    <string name="user_type">Account Type</string>
    <string name="forget_Password">Did forget password ?</string>
    <string name="Change_Password">change password</string>
    <string name="forgetText">We will help you recover your password</string>
    <string name="help_you_to_restore_password">Please Insert Your Phone Number And We send you the confirm code</string>
    <string name="insert_code_help">Please Insert the code that we has been sent</string>
    <string name="send_otp">Send verification code</string>
    <string name="Current_Password">Current Password</string>
    <string name="New_password">New Password</string>
    <string name="re_New_password">Re New Password</string>
    <string name="save">save</string>
    <string name="write_new_pass">Please enter the new password</string>
    <string name="no_products">Sorry, no Products to display</string>
    <string name="user_rates">Users Rates</string>
    <string name="total_buy_product">Cart Total</string>
    <string name="Complete_order">Complete the application</string>
    <string name="delivery_place">delivery location</string>
    <string name="delivery_to">Delivering to</string>
    <string name="choose_location_map">Choose a location from the map</string>
    <string name="buy_way">Payment method</string>
    <string name="Credit_card">Credit card</string>
    <string name="cash_Money">cash Money</string>
    <string name="Payment_Summary">Payment Summary</string>
    <string name="Complete_the_order">Complete the order</string>
    <string name="insert_credit_card_details">Enter the card information</string>
    <string name="credit_card_number">card number</string>
    <string name="Checkout">Checkout</string>
    <string name="Expiry_date">Expiry date</string>
    <string name="cvvv_number">CVV Num</string>
    <string name="success_send">The request was successfully completed</string>
    <string name="address">Addresses</string>
    <string name="add_new_address">Add a new address</string>
    <string name="saved_address">Saved titles</string>
    <string name="Overview">Overview</string>
    <string name="add_to_bin">Add to cart</string>
    <string name="details">Specifications</string>
    <string name="read_more">Read more</string>
    <string name="read_less">read less</string>
    <string name="related_product">Related Products</string>
    <string name="ammount">Quantity</string>
    <string name="subject">the topic</string>
    <string name="send_message">Send us a message</string>
    <string name="send_message2">send</string>
    <string name="name">Name</string>
    <string name="delevery_address">Shipping Address</string>
    <string name="buyer">Purchases</string>
    <string name="edit_profile">Edit profile</string>
    <string name="classify">Classify</string>
    <string name="sort_by">Sort by</string>
    <string name="price_from_low_to_high">Price From Low To High</string>
    <string name="price_from_high_to_low">Price From Low To High</string>
    <string name="from_A_to_Z">From A To Z</string>
    <string name="trade_mark">trade mark</string>
    <string name="color">Color</string>
    <string name="price">Price</string>
    <string name="from">From</string>
    <string name="To">To</string>
    <string name="Application">Application</string>
    <string name="user_rate">Customer Reviews</string>
    <string name="Payment_details">Payment Details</string>
    <string name="search">Search</string>
    <string name="search_record">Search Record</string>
    <string name="delete_record">Delete Record</string>
    <string name="write_your_messsage_here">Write Your Message Here .......</string>
    <string name="search_about_place_region">Search for an area, street name</string>
    <string name="title_name">New title name</string>
    <string name="examole_home_work">Example (home, work...)</string>
    <string name="Incorrect_location">Incorrect Location</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDy_juDJh3tBuHnNLwYNqKPj_YvL67lEjc</string>
    <string name="google_maps_eccommerce" templateMergeStrategy="preserve" translatable="false">AIzaSyBYq9jwK4VAPUxf3MxiiYcjAOWU2572DQI</string>
    <string name="save_new_password">Save New Password</string>
    <string name="verification_code">Verification Code</string>
    <string name="continuee">Continue</string>
    <string name="resend_code">Resend Code</string>
    <string name="create_new_account2">Create New Account</string>
    <string name="customer">Customer</string>
    <string name="trade">Trade</string>
    <string name="confirm_password">Confirm New Password</string>
    <string name="my_seller">My Seller</string>
    <string name="order_details">Order Details</string>
    <string name="Areyousuretoquite">Are you sure you want log out ?</string>
    <string name="select_delevery_location">Choose a delivery location</string>
    <string name="expires_in">Expires in </string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="phones_and_tablets">Phones and Tablets</string>
    <string name="best_phones">Best Phones</string>
    <string name="Computers_and_accessories">Computers and accessories</string>
    <string name="The_best_laptops">The best laptops</string>
    <string name="Most_Rated_Products">Most Rated Products</string>
    <string name="GPSAlertDialogTitle">GPSAlertDialogTitle</string>
    <string name="action_settings">Action Settings</string>
    <string name="GPSAlertDialogMessage">GPSAlertDialogMessage</string>
    <string name="no_results_found">No Results Found</string>
    <string name="add_address_title">Here you will find all your saved addresses, and you can add new ones for easy selection on demand</string>
    <string name="current_location">Current Location </string>
    <string name="edit">Edit</string>
    <string name="order_number">Order Num</string>
    <string name="delivered">Delivered</string>
    <string name="Rial">Rial</string>
    <string name="delete">Delete</string>
    <string name="very_excellent_service">Very excellent service</string>
    <string name="total">the total</string>
    <string name="Total">Total</string>
    <string name="Shipping">Shipping</string>
    <string name="Verification_code">Verification code</string>
    <string name="customers_service">customers service</string>
    <string name="workdays">workdays</string>
    <string name="times_of_work">times of work</string>
    <string name="We_miss_you">We miss you my friend</string>
    <string name="order_status">Order status</string>
    <string name="order_date">Order Date</string>
    <string name="payment_method">Payment method</string>
    <string name="Login_to_continue">Log in to continue ?</string>
    <string name="To_enjoy_all_the_benefits_of_the_programs_you_must_be_logged_in">To enjoy all features of the app \n login now</string>
    <string name="Skip">No thanks</string>
    <string name="The_cart_does_not_contain_any_products">Cart does not contain products</string>
    <string name="browse_products">Browse products</string>
    <string name="add_to_cart_first">Add products to the cart first</string>
</resources>