<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/almarai_bold"
            android:text="@string/classify"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp" />

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="@dimen/_27sdp"
            android:layout_height="wrap_content"
            android:padding="@dimen/_1sdp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="@dimen/_15sdp"
            android:src="@drawable/ic_back_icon"
            android:elevation="@dimen/_5sdp"
            />


    </FrameLayout>

    <ImageView
        style="@style/view_style2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:padding="1dp" />



    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/fragment_faq_sr_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_16sdp"
                        android:fontFamily="@font/almarai_bold"
                        android:gravity="center_vertical"
                        android:text="@string/sort_by"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15ssp"
                        android:textStyle="bold" />

                    <RadioGroup

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp">

                        <RadioButton
                            android:id="@+id/fragment_classify_product_from_low_to_high_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:fontFamily="@font/almarai_regular"
                            android:text="@string/price_from_low_to_high"
                            android:textSize="@dimen/_11ssp" />

                        <RadioButton
                            android:id="@+id/fragment_classify_product_from_high_to_low_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/almarai_regular"
                            android:text="@string/price_from_high_to_low"
                            android:textSize="@dimen/_11ssp" />

                        <RadioButton
                            android:id="@+id/fragment_classify_product_from_A_to_Z_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/almarai_regular"
                            android:text="@string/from_A_to_Z"
                            android:textSize="@dimen/_11ssp" />

                    </RadioGroup>

                    <ImageView
                        style="@style/view_style2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:padding="1dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_16sdp"
                        android:fontFamily="@font/almarai_bold"
                        android:gravity="center_vertical"
                        android:text="@string/trade_mark"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15ssp"
                        android:textStyle="bold" />


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/Fragment_classify_product_rv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:layout_marginEnd="@dimen/_16sdp" />
                    <ImageView
                        style="@style/view_style2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:padding="1dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_16sdp"
                        android:fontFamily="@font/almarai_bold"
                        android:gravity="center_vertical"
                        android:text="@string/color"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15ssp"
                        android:textStyle="bold" />
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/Fragment_classify_product_color_rv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:layout_marginEnd="@dimen/_16sdp" />
                    <ImageView
                        style="@style/view_style2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:padding="1dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_16sdp"
                        android:fontFamily="@font/almarai_bold"
                        android:gravity="center_vertical"
                        android:text="@string/price"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15ssp"
                        android:textStyle="bold" />
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:layout_marginEnd="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_10sdp"

                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start|center_vertical"

                            android:fontFamily="@font/almarai_regular"
                            android:gravity="center_vertical"
                            android:text="@string/from"
                            android:textColor="@color/black_292929"
                            android:textSize="@dimen/_10ssp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end|center_vertical"
                            android:fontFamily="@font/almarai_regular"
                            android:gravity="center_vertical"
                            android:text="@string/To"
                            android:textColor="@color/black_292929"
                            android:textSize="@dimen/_10ssp" />
                    </FrameLayout>
                    <com.google.android.material.slider.RangeSlider
                        android:id="@+id/fragment_search_price_range_slider"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:valueTo="9000000"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:valueFrom="1"

                        app:labelBehavior="withinBounds"
                        android:layout_marginTop="-40dp"
                        app:values="@array/initial_slider_values"
                        >
<!--                        android:stepSize="-9999"-->
<!--                        app:values="@array/initial_slider_values"-->
                    </com.google.android.material.slider.RangeSlider>
                    <LinearLayout
                        android:id="@+id/product_details_add_to_bin_btu"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:layout_marginEnd="@dimen/_16sdp"
                        android:layout_marginBottom="@dimen/_32sdp"
                        android:background="@drawable/btn_blue_complete_shape"
                        android:gravity="center|center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_8sdp"
                            android:fontFamily="@font/almarai_bold"
                            android:text="@string/Application"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_12ssp" />

                    </LinearLayout>

                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>