<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/no_products"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:gravity="center"
    android:elevation="@dimen/_3sdp"
    android:paddingBottom="@dimen/_40sdp"
    android:orientation="vertical"
    app:behavior_hideable="true"
    android:visibility="gone">
    <ImageView
        android:id="@+id/no_products_img"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:src="@drawable/ic_cart_gray_icon"
        />
    <TextView
        android:id="@+id/no_products_tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:lineSpacingExtra="@dimen/_4sdp"
        android:fontFamily="@font/almarai_bold"
        android:gravity="center"
        android:text="@string/The_cart_does_not_contain_any_products"
        android:textColor="@color/gray_ABABAB"
        android:textSize="@dimen/_13ssp" />
    <TextView
        android:id="@+id/no_products_tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:lineSpacingExtra="@dimen/_4sdp"
        android:fontFamily="@font/almarai_regular"
        android:gravity="center"
        android:text="@string/add_to_cart_first"
        android:textColor="@color/gray_ABABAB"
        android:textSize="@dimen/_12ssp" />
    <Button
        android:id="@+id/no_products_browse_products_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_gravity="center_vertical"
        android:textColor="@color/white"
        android:background="@drawable/shap_buttom_blue"
        android:gravity="center"
        android:layout_marginBottom="@dimen/_5sdp"
        android:fontFamily="@font/almarai_bold"
        android:text="@string/browse_products"
        android:textSize="@dimen/_12ssp"
        app:backgroundTint="@null" />
</LinearLayout>
