<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/no_wifi_and_server_error"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:elevation="@dimen/_11sdp"
    android:orientation="vertical"
    app:behavior_hideable="true"
    android:visibility="gone">
        <ImageView
            android:id="@+id/no_wifi_and_server_error_img"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250sdp"
            android:layout_margin="@dimen/_20sdp"
            android:src="@drawable/no_internet2"
            />
<!--    <ImageView-->
<!--        android:id="@+id/no_wifi_and_server_error_img2"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="@dimen/_250sdp"-->
<!--        android:layout_marginStart="@dimen/_15sdp"-->
<!--        android:layout_marginEnd="@dimen/_15sdp"-->
<!--        android:src="@drawable/server_error"-->
<!--        android:visibility="gone"-->
<!--        />-->
    <TextView
        android:id="@+id/no_wifi_and_server_error_tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:lineSpacingExtra="@dimen/_4sdp"
        android:fontFamily="@font/almarai_bold"
        android:gravity="center"
        android:text="@string/error_inter_net1"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp" />
    <TextView
        android:id="@+id/no_wifi_and_server_error_tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:lineSpacingExtra="@dimen/_4sdp"
        android:fontFamily="@font/almarai_regular"
        android:gravity="center"
        android:text="@string/error_inter_net2"
        android:textColor="@color/gray_text2"
        android:textSize="@dimen/_12ssp" />
    <Button
        android:id="@+id/no_wifi_try_again_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_gravity="center_vertical"
        android:textColor="@color/white"
        android:background="@drawable/shap_buttom_blue"
        android:gravity="center"
        android:fontFamily="@font/almarai_bold"
        android:text="@string/try_again"
        android:textSize="@dimen/_12ssp"
        app:backgroundTint="@null" />
    </LinearLayout>
