<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="@dimen/_20sdp"
    android:layout_marginEnd="@dimen/_20sdp"
    android:elevation="@dimen/_5ssp">

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_270sdp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        app:cardCornerRadius="@dimen/_8sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                >

                <TextView
                    android:id="@+id/dialogTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:fontFamily="@font/almarai_bold"
                    android:gravity="center"
                    android:text="@string/Login_to_continue"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_17sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:lineSpacingExtra="@dimen/_4sdp"
                    android:fontFamily="@font/almarai_light"
                    android:gravity="center"
                    android:text="@string/To_enjoy_all_the_benefits_of_the_programs_you_must_be_logged_in"
                    android:textColor="@color/gray_text2"
                    android:textSize="@dimen/_15sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:gravity="center"
                android:paddingBottom="@dimen/_2sdp"
                android:paddingTop="@dimen/_2sdp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:background="@drawable/shap_buttom_blue"
                    android:gravity="center"
                    android:fontFamily="@font/almarai_bold"
                    android:text="@string/login"
                    android:textSize="@dimen/_12ssp"
                    app:backgroundTint="@null" />

                <TextView
                    android:id="@+id/skip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:fontFamily="@font/almarai_bold"
                    android:background="@drawable/no_background_buttom"
                    android:gravity="center"
                    android:text="@string/Skip"
                    android:textColor="@color/app_color"
                    android:textSize="@dimen/_13ssp"
                    app:backgroundTint="@null" />


            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>